test/fail/collection-index.app
//Index must be of type Int
application test

define page root() {
}

function test(){
  var set := ["fd3edf","eftrf"];
  var s := set["fdgd"];
  
}